--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,24 +3,45 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+CO');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue');
 
+html * {
+  font-family: 'Monteserrat', sans-serif;
+} 
 
 h1 {
     font-family: 'Monteserrat', sans-serif;
-    color:#7f8593;
+    color: #000000;
   }
+ 
+
+ .background {
+  background-image: url('https://res.cloudinary.com/duws62b88/image/upload/v1719505508/WhatsApp_Image_2024-06-27_at_13.49.19_523d1678_ksnewi.jpg'); /* Adjust the path according to your project structure */
+  background-size: cover; /* Makes the background image cover the whole element */
+  background-repeat: no-repeat; /* Prevents the background image from repeating */
+  background-position: center; /* Centers the background image */
+  width: 100%;
+  height: 100vh; /* Sets the height to 100% of the viewport height */
+}
 
 h2 {
-        font-family: 'Roboto Condensed', sans-serif;
-        color:#505560;
+        font-family: 'Bebas Neue', sans-serif;
+        color:#000000;
     }
 
+h3 {
+      font-family: 'Roboto', sans-serif;
+      font-style:italic;
+        color:#000000;
+}
+
 body {
-    background-color: rgb(30, 41, 52);
+    background-color:#ffffff;
 }  
 
 li {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed', sans-se  rif;
     word-spacing: 5px;
     display: inline;
 }
@@ -34,10 +55,21 @@ ul {
 
 @layer base {
     body {
-      @apply bg-gradient-to-r from-gray-800 to-gray-900;
+      @apply bg-gradient-to-r from-indigo-200 to-fuchsia-100;
     }
 
   }
+@layer utilities {
+    /* Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+}
 
 i {
     margin-left: 5px;
@@ -45,9 +77,13 @@ i {
   }
 
 .fa-brands {
-    color:rgb(95, 131, 161);
+    color:#55505b;
   }
 
 .fa-regular {
-    color:rgb(95, 131, 161);
+    color:#55505b;
   }
+
+.fa-solid {
+    color:#55505b;
+  }  
